# cgp-2021-final

./: .gitignore  CMakeLists.txt  README.md
assignments/voronoi/: main.cpp
assignments/voronoi/shaders/: color.frag  distance.frag  distance_color.frag  shader.vert
assignments/weather/: CMakeLists.txt  main.cpp  primitives.h
assignments/weather/shaders/: rainShader.frag  rainShader.vert  snowShader.frag  snowShader.vert
assignments/weather_effects2/: Camera.h  main.cpp  primitives.h  shader.h
assignments/weather_effects2/shaders/: rain.frag  rain.vert  snow.frag  snow.vert
assignments/weather_effects_rk/: CMakeLists.txt  main.cpp  opengl_debug.h  shader.h
assignments/weather_effects_rk/shaders/: particle.frag  particle.vert
assignments/weather_effects_sol/: CMakeLists.txt  README.txt  main.cpp  particleShader.frag  particleShader.vert  primitives.h  shader.vert
assignments/weather_feedback1/: CMakeLists.txt  Camera.h  main.cpp
assignments/weather_feedback1/shaders/: particle.frag  particle.vert
exam_project/voxel_surface/: CMakeLists.txt  PerlinLikeNoise.h  README.md  camera.h  main.cpp  primitives.h
exam_project/voxel_surface/shaders/: default.frag  default.vert  skybox.vert
exam_project/voxel_world/: CMakeLists.txt  PerlinLikeNoise.h  main.cpp
exercises/exercise_1/exercise_1_3/: main.cpp
exercises/exercise_1/exercise_1_6/: main.cpp
exercises/exercise_1_solutions/exercise_1_1_and_1_2_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_3_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_4_sol/: main.cpp
(+26 files in other folders)
